--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <mockk.version>1.9</mockk.version>
         <junit.jupiter.version>5.5.1</junit.jupiter.version>
         <lombok.version>1.18.12</lombok.version>
+        <apache.commons.version>1.11</apache.commons.version>
     </properties>
 
     <dependencies>
@@ -35,10 +36,19 @@
             <artifactId>jackson-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${apache.commons.version}</version>
         </dependency>
 
         <dependency>
