--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <mockk.version>1.9</mockk.version>
+        <mockito.version>3.5.10</mockito.version>
         <junit.jupiter.version>5.5.1</junit.jupiter.version>
         <lombok.version>1.18.12</lombok.version>
         <apache.commons.version>1.11</apache.commons.version>
@@ -83,9 +83,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
-            <version>${mockk.version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
