Minor fixes to tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/message_hash_store?createDatabaseIfNotExist=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:33066/message_hash_store?createDatabaseIfNotExist=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
-
+spring.datasource.url=jdbc:mysql://mysqldb:3306/message_hash_store?createDatabaseIfNotExist=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=toorpass
 spring.datasource.platform=mysql
