--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,3 @@
-spring.datasource.url=jdbc:mysql://mysqldb:3306/message_hash_store?createDatabaseIfNotExist=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=toorpass
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-logging.level.org.hibernate.SQL= DEBUG
+spring.data.mongodb.host=api-database
+spring.data.mongodb.database=api-database
+#spring.data.mongodb.port=27017
